# Lab2_ac

./: CMakeLists.txt  Makefile  build.ninja  rules.ninja  Лаб.робота 2.docx
